# mental-health-economic-cost-global-latam-2020-2024

./: CITATION.cff  EXAMPLE_NOTEBOOK.ipynb  HUGGINGFACE_CARD.md  README.md  codemeta.json  kaggle-metadata.json  pyproject.toml  setup.py
mental_health_economic_co/: __init__.py
mental_health_economic_cost/: __init__.py  loader.py
notebooks/: economic_cost_mental_health_analysis.ipynb
