[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mental-health-economic-cost"
version = "1.0.0"
description = "Economic cost of mental health disorders: global and Latin America 2020-2024. DOI: 10.7910/DVN/FQEYVN"
license = {text = "CC0-1.0"}
authors = [{name = "Juan Moises de la Serna", email = "juanmoises.delaserna@gmail.com"}]
keywords = ["mental-health","economics","GDP","productivity","Latin-America"]
requires-python = ">=3.7"
dependencies = ["pandas>=1.3.0","requests>=2.25.0","numpy>=1.20.0"]

[project.urls]
Homepage = "https://github.com/juanmoisesd/mental-health-economic-cost-global-latam-2020-2024"
"Dataset DOI" = "https://doi.org/10.7910/DVN/FQEYVN"
